# harmonized-toolkit

./: README.md  TRESTLE.py  design_doc.md  pitt_readme.md  requirements.txt
analysis/: README.md  compare_features.py  eval_data.py  feature_extractor.py  get_features.py  main.py  merge_data.py  pyproject.toml
files/: baseline_manfest.json
scripts/: audio_preprocess.py  audio_process.json  db_preprocess.py  generate_audio_preprocess.sh  generate_full_preprocess.sh  generate_text_preprocess.sh  manifest_checker.py  merge_db_adr.py  preprocess_wls.py  text_preprocess.py  text_process.json  util_fun.py
trestle/: .gitignore  README.md  pyproject.toml
trestle/src/trestle/: __init__.py
trestle/src/trestle/audio/: __init__.py  asr_pipeline.py  audio_processor.py  audio_wrapper.py
trestle/src/trestle/io/: __init__.py  audio_utils.py  audio_wrapper.py  batch_wrapper.py  config.py  text_wrapper.py
trestle/src/trestle/text/: __init__.py  cha_processor.py
v1/: hackallenge.md  trestle.py
