[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "jiwer>=4.0.0",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
