[project]
name = "trestle"
version = "2.2.0"
description = "Toolkit for Reproducible Speech, Text, and Language Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.13.0",
  "flash-attn",
  "ninja>=1.13.0",
  "packaging>=26.0",
  "polars>=1.38.1",
  "praatio>=6.2.2",
  "protobuf>=7.34.0",
  "psutil>=7.2.2",
  "pydub>=0.25.1",
  "requests>=2.32.5",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "transformers>=5.3.0",
]
[tool.uv.sources]
pytorch-cu126 = { url = "https://download.pytorch.org/whl/cu126" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
